--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
     <title>SnipTap</title>
 
     <link rel="stylesheet" href="./style/index.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Syne:wght@400..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Syne:wght@400..800&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <a href="#">
+            <img src="./assets/icons/logo.svg" alt="Logo do Sniptap">
+        </a>
+        <a href="#">
+            <img src="./assets/icons/shopping-bag.svg" alt="Icone representando uma sacola de compras">
+            <span>1</span>
+        </a>
+    </header>
 </body>
 </html>
