--- a/index.html
+++ b/index.html
@@ -20,5 +20,16 @@
             <span>1</span>
         </a>
     </header>
+
+    <section class="hero">
+        <h1>Snitap, sua vida mais 
+            <div>
+            <span>radical</span>
+            <span>divertida</span>
+            <span>saudável</span>
+            <span>radical</span>
+        </div>
+        </h1>
+    </section>
 </body>
 </html>
