--- a/index.html
+++ b/index.html
@@ -24,12 +24,24 @@
     <section class="hero">
         <h1>Snitap, sua vida mais 
             <div>
-            <span>radical</span>
-            <span>divertida</span>
-            <span>saudável</span>
-            <span>radical</span>
-        </div>
+                <span>radical</span>
+                <span>divertida</span>
+                <span>saudável</span>
+                <span>radical</span>
+            </div>
         </h1>
+        <div class="buttons">
+            <a href="#" class="button buy shadow">
+                <img src="./assets/icons/shopping-bag.svg" alt="icone de sacola">
+                COMPRAR AGORA
+            </a>
+            <a href="#" class="button play">
+                <span class="shadow">
+                    <img src="./assets/icons/play.svg" alt="Icone represtando um player">
+                </span>
+                VEJA EM AÇÃO
+            </a>
+        </div>
     </section>
 </body>
 </html>
