animation hero img

--- a/index.html
+++ b/index.html
@@ -22,25 +22,36 @@
     </header>
 
     <section class="hero">
-        <h1>Snitap, sua vida mais 
+        <div>
+            <h1>Snitap, sua vida mais 
             <div>
                 <span>radical</span>
                 <span>divertida</span>
                 <span>saudável</span>
                 <span>radical</span>
             </div>
-        </h1>
-        <div class="buttons">
-            <a href="#" class="button buy shadow">
-                <img src="./assets/icons/shopping-bag.svg" alt="icone de sacola">
-                COMPRAR AGORA
-            </a>
-            <a href="#" class="button play">
-                <span class="shadow">
-                    <img src="./assets/icons/play.svg" alt="Icone represtando um player">
-                </span>
-                VEJA EM AÇÃO
-            </a>
+            </h1>
+            <div class="buttons">
+                <a href="#" class="button buy shadow">
+                    <img src="./assets/icons/shopping-bag.svg" alt="icone de sacola">
+                    COMPRAR AGORA
+                </a>
+                <a href="#" class="button play">
+                    <span class="shadow">
+                        <img src="./assets/icons/play.svg" alt="Icone represtando um player">
+                    </span>
+                    VEJA EM AÇÃO
+                </a>
+            </div>
+        </div>
+        
+        <div>
+            <div class="content">
+                <img src="./assets/hero/Ellipse.svg" alt="fundo com formato de ellipse cor azul">
+                <img src="./assets/hero/patins-image.png" alt="Ilustração do produto patins">
+                <img src="./assets/hero/stars-1.svg" alt="imagens de estrela 1">
+                <img src="./assets/hero/stars-2.svg" alt="imagens de estrela 2">
+            </div>
         </div>
     </section>
 </body>
