--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Syne:wght@400..800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header class="top">
         <a href="#">
             <img src="./assets/icons/logo.svg" alt="Logo do Sniptap">
         </a>
@@ -91,6 +91,47 @@
                 <img src="./assets/banner.svg" alt="">
                 <img src="./assets/banner.svg" alt="">
             </div>
+        </div>
+    </section>
+
+    <section class="galerry">
+        <header>
+            <span>Galeria de fotos</span>
+            <h2>#usesnitap por aí</h2>
+        </header>
+
+        <div class="content">
+            <figure>
+                <img src="./assets/images/01.png" alt="Imagem de um mulher usando snitap">
+                <figcaption>
+                    <img src="./assets/images/person.png" alt="Foto de perfil do usuário">
+                    <span>@laviniapereira</span>
+                </figcaption>
+            </figure>
+
+            <figure data-delay>
+                <img src="./assets/images/02.png" alt="Imagem de um grupo de pessoas usando snitap">
+                <figcaption>
+                    <img src="./assets/images/person.png" alt="Foto de perfil do usuário">
+                    <span>@laviniapereira</span>
+                </figcaption>
+            </figure>
+
+            <figure>
+                <img src="./assets/images/03.png" alt="Imagem de uma pessoa colocando o snitap">
+                <figcaption>
+                    <img src="./assets/images/person.png" alt="Foto de perfil do usuário">
+                    <span>@laviniapereira</span>
+                </figcaption>
+            </figure>
+
+            <figure data-delay>
+                <img src="./assets/images/04.png" alt="Imagem de uma pessoa andando sobre o snitap">
+                <figcaption>
+                    <img src="./assets/images/person.png" alt="Foto de perfil do usuário">
+                    <span>@laviniapereira</span>
+                </figcaption>
+            </figure>
         </div>
     </section>
 </body>
