--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>SnipTap</title>
 
     <link rel="stylesheet" href="./style/index.css">
+    <link rel="icon" href="./assets/icons/logo.svg"  type="image/svg">
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Syne:wght@400..800&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -105,7 +106,7 @@
                 <img src="./assets/images/01.png" alt="Imagem de um mulher usando snitap">
                 <figcaption>
                     <img src="./assets/images/person.png" alt="Foto de perfil do usuário">
-                    <span>@laviniapereira</span>
+                    <span>@___.aires</span>
                 </figcaption>
             </figure>
 
@@ -113,7 +114,7 @@
                 <img src="./assets/images/02.png" alt="Imagem de um grupo de pessoas usando snitap">
                 <figcaption>
                     <img src="./assets/images/person.png" alt="Foto de perfil do usuário">
-                    <span>@laviniapereira</span>
+                    <span>@___.aires</span>
                 </figcaption>
             </figure>
 
@@ -121,7 +122,7 @@
                 <img src="./assets/images/03.png" alt="Imagem de uma pessoa colocando o snitap">
                 <figcaption>
                     <img src="./assets/images/person.png" alt="Foto de perfil do usuário">
-                    <span>@laviniapereira</span>
+                    <span>@___.aires</span>
                 </figcaption>
             </figure>
 
@@ -129,7 +130,7 @@
                 <img src="./assets/images/04.png" alt="Imagem de uma pessoa andando sobre o snitap">
                 <figcaption>
                     <img src="./assets/images/person.png" alt="Foto de perfil do usuário">
-                    <span>@laviniapereira</span>
+                    <span>@___.aires</span>
                 </figcaption>
             </figure>
         </div>
