--- a/index.html
+++ b/index.html
@@ -135,5 +135,33 @@
             </figure>
         </div>
     </section>
+
+    <footer>
+        <div class="logo">
+            <img src="./assets/icons/logo.svg" alt="Logo do snitap">
+            Snitap
+        </div>
+
+        <nav>
+            <a href="#">Sobre</a>
+            <a href="#">Nossas lojas</a>
+            <a href="#">Política de privacidade</a>
+        </nav>
+
+        <div class="social-links">
+            <a href="#" title="Instagram">
+                <img src="./assets/icons/instagram.svg" alt="Logo da rede social Instagram">
+            </a>
+            <a href="#" title="Facebook">
+                <img src="./assets/icons/facebook.svg" alt="Logo da rede social Facebook">
+            </a>
+            <a href="#" title="YouTube">
+                <img src="./assets/icons/youtube.svg" alt="Logo da rede social YouTube">
+            </a>
+            <a href="#" title="TikTok">
+                <img src="./assets/icons/tiktok.svg" alt="Logo da rede social TikTok">
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
